<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home_menu_title"
            android:checked="true"/>
        <item
            android:id="@+id/drawer_item_test"
            android:icon="@drawable/ic_description_black_48dp"
            android:title="@string/test_menu_title"/>

        <item
            android:id="@+id/drawer_item_history"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="@string/history_menu_title"/>

    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_item_language"
            android:icon="@drawable/ic_language_black_48dp"
            android:title="@string/language_menu_title" />
        <item
            android:id="@+id/drawer_item_logout"
            android:icon="@drawable/ic_power_settings_new_black_48dp"
            android:title="@string/logout_menu_title" />
    </group>
</menu>